--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
 
 <!-- Image to hack wechat -->
-<img src="/img/icon_wechat.png" width="0" height="0" />
+<img src="/img/icon_wechat.jpg" width="100" height="100" />
 <!-- Migrate from head to bottom, no longer block render and still work -->
 
 </body>
