--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@
     {% include footer.html %}
 
 
-<!-- Image to hack wechat -->
-<img src="/img/icon_wechat.jpg" width="200" height="200" />
+<!-- 微信名片，加在左下角 -->
+<img src="/img/icon_wechat_8.jpg" width="200" height="200" />
 <!-- Migrate from head to bottom, no longer block render and still work -->
 
 </body>
