--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <!-- Image to hack wechat -->
 <img src="/img/icon_wechat_7.jpg" width="100" height="100">
-<img src="{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}" width="200" height="200">
+<!-- <img src="{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}" width="200" height="200"> -->
 
 <!-- Post Header -->
 <style type="text/css">
