--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-<!-- Image to hack wechat -->
-<img src="/img/icon_wechat_7.jpg" width="100" height="100">
+<!-- 微信名片 -->
+<!-- <img src="/img/icon_wechat_7.jpg" width="100" height="100"> -->
 <!-- <img src="{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}" width="200" height="200"> -->
 
 <!-- Post Header -->
