--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,10 +22,10 @@
     <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
 
     <!-- Custom CSS 自定义样式表 -->
-    <link rel="stylesheet" href="{{ "/css/hux-blog.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/hux-blog-contain-syntax.css" | prepend: site.baseurl }}">
 
-    <!-- Pygments Github CSS 语法高亮样式表 -->
-    <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}">
+    <!-- Pygments Github CSS 语法高亮样式表，不起作用，删掉 -->
+    <!-- <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}"> -->
 
     <!-- Custom Fonts 自定义字体 -->
     <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
